I fixed dropdwon menu. Before it was hidden behind the Slider images and conent

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -101,6 +101,11 @@
    }
    
 
+   #our-projects {
+      margin-bottom: 2rem;
+      
+  }
+
    #our-projects .container .lead {
       margin-bottom: 3rem;
       width: 97%;
@@ -230,8 +235,8 @@
 
    .bottomnav .hamburger {
       display: flex;
-      align-items: center;
-      
+      margin-bottom: 2rem;
+      /* justify-content: flex-start; */
    }
    
    .bottomnav a, .dropdown .dropbtn {
@@ -247,20 +252,42 @@
       align-items: center;
     }
 
+    /* After Hamburger Is Clicked On */
 
+    
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 
+  /* This is Causing Sticky To NOt Work After you Click On "Hamburger Menu" */
    .bottomnav.responsive {position: relative;}
 
    .bottomnav.responsive {
       display: flex;
       align-items: center;
    }
-/*    
+
+
+   /* Fix Bottomnav Sticky To Stick To Top After Dropdown Is Open */
+
+   .bottomnav.sticky{
+      background-color: #fff;
+      position: fixed;
+      top: 0;
+      }
+
+
+   /*  Position "Menu Click Here" After Click */
+   
    .bottomnav.responsive .icon {
      position: absolute;
-     right: 0;
+     align-items: center;
+     /* right: 200px; */
      top: 0;
-   } */
+   }
 
    .bottomnav .items .item {
       display: flex;
@@ -274,9 +301,27 @@
 
 /* AFTER YOU CLICK ON HAMBURGER */
 
+
+.bottomnav.responsive .container .items {
+   display: flex;
+   justify-content: center !important;
+}
+
+
 .bottomnav.responsive .container .items .item  a {
    float: none;
    display: block;
+   text-align: center;
+}
+
+.bottomnav.responsive .container .items .item  .mynav .hamburger  {
+   display: flex;
+  justify-content: center;
+}
+
+.bottomnav.responsive .container .items .item  .mynav ul  {
+   display: flex;
+   flex-direction: column;
    text-align: left;
 }
 
@@ -285,6 +330,8 @@
    display: flex !important;
    align-items: center;
 }
+
+
 
 .bottomnav.responsive .dropdown {float: none;}
 .bottomnav.responsive .dropdown-content {position: relative;}
@@ -296,11 +343,7 @@
 
 
 
-
-
    /* ================ WHITE MENU NAVBAR DROPDOWN - END ============ */
-
-
 
 
 
